# granola-tools

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  build_index.py  config.json  config.json.template  granola  pyproject.toml  sync.py  sync_and_index.sh
skills/searching-granola-meetings/: SKILL.md
src/granola_tools/: cli.py  config.py  index.py  sync.py  token_manager.py
