[project]
name = "granola-tools"
version = "0.1.0"
description = "CLI for searching and managing Granola meeting transcripts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
granola = "granola_tools.cli:main"
granola-sync = "granola_tools.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/granola_tools"]
