[project]
name = "granola-tools"
version = "0.1.0"
description = "CLI for searching and managing Granola meeting transcripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "typer>=0.9.0",
]

[project.scripts]
granola = "granola_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/granola_tools"]
